--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    {%metas%}
-    {%css%}
+    <title>Lista de Ações</title>
 </head>
 <body>
-    <h1>Dashboard de Exemplo</h1>
-    <div id="dashboard">{{ dash_script | safe }}</div>
-    {%config%}
-    {%scripts%}
+    <h1>Lista de Ações</h1>
+    <ul>
+        {% for ticket in tickets %}
+            <li>{{ ticket }}</li>
+        {% endfor %}
+    </ul>
+    <a href="{{ url_for('transform') }}">Ver Transformação dos Dados</a>
 </body>
 </html>
