incorporação do layout base em dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Home Page{% endblock %}</title>
 
+    <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Custom styles for this template dashboard -->
+    <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
+
     <!-- Fonte personalizada -->
     <link href="https://fonts.cdnfonts.com/css/source-sans-pro" rel="stylesheet">
 
     <!-- Ícone da página -->
     <link rel="icon" href="../static/favicon/icons8-web-analytics-16.png" type="image/x-icon">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="../static/style.css"/>
-
-
+    
 </head>
 <body>
     <!-- Cabeçalho -->
