--- a/static/style.css
+++ b/static/style.css
@@ -38,8 +38,8 @@ body {
 
 /*footer page*/
 .footer {
-  height: 45px;
-    background-color: #75a5db; 
+  height: 75px;
+    background-color: #2c68ad; 
     color: #fff;
     padding: 10px 0;
     font-family: 'Source Sans Pro', sans-serif;
